--- a/.htaccess
+++ b/.htaccess
@@ -1,17 +1,24 @@
 <IfModule mod_rewrite.c>
 
+        <IfModule mod_negotiation.c>
+            Options -MultiViews
+        </IfModule>
 
-    RewriteEngine On
-    RewriteBase /
-    RewriteRule ^$ public/index.php [L]
+        RewriteEngine on
+        RewriteCond %{REQUEST_URI} !^public
+        RewriteRule ^(.*)$./public/$1 [L]
 
-    RewriteRule ^((?!public/).*)$ public/$1 [L,NC]
+        # Redirect Trailing Slashes If Not A Folder...
+        RewriteCond %{REQUEST_FILENAME} !-d
+        RewriteCond %{REQUEST_URI} (.+)/$
+        RewriteRule ^ %1 [L,R=301]
 
-</IfModule>
+        # Handle Front Controller...
+        RewriteCond %{REQUEST_FILENAME} !-d
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteRule ^ index.php [L]
 
-# php -- BEGIN cPanel-generated handler, do not edit
-# Set the “ea-php74” package as the default “PHP” programming language.
-<IfModule mime_module>
-  AddHandler application/x-httpd-ea-php74___lsphp .php .php7 .phtml
-</IfModule>
-# php -- END cPanel-generated handler, do not edit
+        # Handle Authorization Header
+        RewriteCond %{HTTP:Authorization} .
+        RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+    </IfModule>
